compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__clause_guards_6.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 90
expression: "\npub fn main() {\n  case 1, 0 {\n    x, y if x <= y -> 1\n    _, _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case 1, 0 {
    x, y if x <= y -> 1
    _, _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    case {1, 0} of
        {X, Y} when X =< Y ->
            1;

        {_, _} ->
            0
    end.
