compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__guards__constants_in_guards.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/guards.rs
assertion_line: 351
expression: "\npub const string_value = \"constant value\"\npub const float_value = 3.14\npub const int_value = 42\npub const tuple_value = #(1, 2.0, \"3\")\npub const list_value = [1, 2, 3]\n\npub fn main(arg) {\n  let _ = list_value\n  case arg {\n    #(w, x, y, z) if w == tuple_value && x == string_value && y >. float_value && z == int_value -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub const string_value = "constant value"
pub const float_value = 3.14
pub const int_value = 42
pub const tuple_value = #(1, 2.0, "3")
pub const list_value = [1, 2, 3]

pub fn main(arg) {
  let _ = list_value
  case arg {
    #(w, x, y, z) if w == tuple_value && x == string_value && y >. float_value && z == int_value -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 8).
-spec main({{integer(), float(), binary()}, binary(), float(), integer()}) -> integer().
main(Arg) ->
    _ = [1, 2, 3],
    case Arg of
        {W, X, Y, Z} when (((W =:= {1, 2.0, <<"3"/utf8>>}) andalso (X =:= <<"constant value"/utf8>>)) andalso (Y > 3.14)) andalso (Z =:= 42) ->
            1;

        _ ->
            0
    end.
